src/objects/vql/grammar/vqlParser.cpp

// Generated from
// /home/xwy/Project/recursive-join/src/objects/vql/grammar/vql.g4 by
// ANTLR 4.13.1

#include "vqlListener.h"

#include "vqlParser.h"

using namespace antlrcpp;

using namespace antlr4;

namespace {

struct VqlParserStaticData final {
  VqlParserStaticData(std::vector<std::string> ruleNames,
                      std::vector<std::string> literalNames,
                      std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  VqlParserStaticData(const VqlParserStaticData &) = delete;
  VqlParserStaticData(VqlParserStaticData &&) = delete;
  VqlParserStaticData &operator=(const VqlParserStaticData &) = delete;
  VqlParserStaticData &operator=(VqlParserStaticData &&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag vqlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
    VqlParserStaticData *vqlParserStaticData = nullptr;

void vqlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (vqlParserStaticData != nullptr) {
    return;
  }
#else
  assert(vqlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<VqlParserStaticData>(
      std::vector<std::string>{"var_prop", "var_props", "int_range",
                               "property_filter", "vertex_filter", "vertex",
                               "fixed_length", "variable_length", "length",
                               "shortest", "forward_edge", "backward_edge",
                               "undirected_edge", "edge", "path_append",
                               "pattern", "patterns", "count_only", "query"},
      std::vector<std::string>{
          "",     "'.'",  "','",        "'-'",      "'id:'",    "'tag:'", "'{'",
          "'}'",  "'('",  "')'",        "'['",      "']'",      "'..'",   "'s'",
          "'->'", "'<-'", "'count of'", "'vmatch'", "'return'", "';'"},
      std::vector<std::string>{"", "", "", "", "",    "",   "",   "",
                               "", "", "", "", "",    "",   "",   "",
                               "", "", "", "", "INT", "WS", "VAR"});
  staticData->serializedATN = antlr4::atn::SerializedATNView(
      serializedATNSegment,
      sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) {
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i),
                                           i);
  }
  vqlParserStaticData = staticData.release();
}

} // namespace

vqlParser::vqlParser(TokenStream *input)
    : vqlParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

vqlParser::vqlParser(TokenStream *input,
                     const antlr4::atn::ParserATNSimulatorOptions &options)
    : Parser(input) {
  vqlParser::initialize();
  _interpreter = new atn::ParserATNSimulator(
      this, *vqlParserStaticData->atn, vqlParserStaticData->decisionToDFA,
      vqlParserStaticData->sharedContextCache, options);
}

vqlParser::~vqlParser() { delete _interpreter; }

const atn::ATN &vqlParser::getATN() const { return *vqlParserStaticData->atn; }

std::string vqlParser::getGrammarFileName() const { return "vql.g4"; }

const std::vector<std::string> &vqlParser::getRuleNames() const {
  return vqlParserStaticData->ruleNames;
}

const dfa::Vocabulary &vqlParser::getVocabulary() const {
  return vqlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView vqlParser::getSerializedATN() const {
  return vqlParserStaticData->serializedATN;
}

//----------------- Var_propContext
//------------------------------------------------------------------

vqlParser::Var_propContext::Var_propContext(ParserRuleContext *parent,
                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *> vqlParser::Var_propContext::VAR() {
  return getTokens(vqlParser::VAR);
}

tree::TerminalNode *vqlParser::Var_propContext::VAR(size_t i) {
  return getToken(vqlParser::VAR, i);
}

size_t vqlParser::Var_propContext::getRuleIndex() const {
  return vqlParser::RuleVar_prop;
}

void vqlParser::Var_propContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_prop(this);
}

void vqlParser::Var_propContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_prop(this);
}

vqlParser::Var_propContext *vqlParser::var_prop() {
  Var_propContext *_localctx =
      _tracker.createInstance<Var_propContext>(_ctx, getState());
  enterRule(_localctx, 0, vqlParser::RuleVar_prop);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(vqlParser::VAR);
    setState(41);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == vqlParser::T__0) {
      setState(39);
      match(vqlParser::T__0);
      setState(40);
      match(vqlParser::VAR);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_propsContext
//------------------------------------------------------------------

vqlParser::Var_propsContext::Var_propsContext(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<vqlParser::Var_propContext *>
vqlParser::Var_propsContext::var_prop() {
  return getRuleContexts<vqlParser::Var_propContext>();
}

vqlParser::Var_propContext *vqlParser::Var_propsContext::var_prop(size_t i) {
  return getRuleContext<vqlParser::Var_propContext>(i);
}

size_t vqlParser::Var_propsContext::getRuleIndex() const {
  return vqlParser::RuleVar_props;
}

void vqlParser::Var_propsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_props(this);
}

void vqlParser::Var_propsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_props(this);
}

vqlParser::Var_propsContext *vqlParser::var_props() {
  Var_propsContext *_localctx =
      _tracker.createInstance<Var_propsContext>(_ctx, getState());
  enterRule(_localctx, 2, vqlParser::RuleVar_props);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    var_prop();
    setState(48);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == vqlParser::T__1) {
      setState(44);
      match(vqlParser::T__1);
      setState(45);
      var_prop();
      setState(50);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Int_rangeContext
//------------------------------------------------------------------

vqlParser::Int_rangeContext::Int_rangeContext(ParserRuleContext *parent,
                                              size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *> vqlParser::Int_rangeContext::INT() {
  return getTokens(vqlParser::INT);
}

tree::TerminalNode *vqlParser::Int_rangeContext::INT(size_t i) {
  return getToken(vqlParser::INT, i);
}

size_t vqlParser::Int_rangeContext::getRuleIndex() const {
  return vqlParser::RuleInt_range;
}

void vqlParser::Int_rangeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInt_range(this);
}

void vqlParser::Int_rangeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInt_range(this);
}

vqlParser::Int_rangeContext *vqlParser::int_range() {
  Int_rangeContext *_localctx =
      _tracker.createInstance<Int_rangeContext>(_ctx, getState());
  enterRule(_localctx, 4, vqlParser::RuleInt_range);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    match(vqlParser::INT);
    setState(52);
    match(vqlParser::T__2);
    setState(53);
    match(vqlParser::INT);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Property_filterContext
//------------------------------------------------------------------

vqlParser::Property_filterContext::Property_filterContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *vqlParser::Property_filterContext::INT() {
  return getToken(vqlParser::INT, 0);
}

vqlParser::Int_rangeContext *vqlParser::Property_filterContext::int_range() {
  return getRuleContext<vqlParser::Int_rangeContext>(0);
}

size_t vqlParser::Property_filterContext::getRuleIndex() const {
  return vqlParser::RuleProperty_filter;
}

void vqlParser::Property_filterContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProperty_filter(this);
}

void vqlParser::Property_filterContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProperty_filter(this);
}

vqlParser::Property_filterContext *vqlParser::property_filter() {
  Property_filterContext *_localctx =
      _tracker.createInstance<Property_filterContext>(_ctx, getState());
  enterRule(_localctx, 6, vqlParser::RuleProperty_filter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(59);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
    case vqlParser::T__3: {
      enterOuterAlt(_localctx, 1);
      setState(55);
      match(vqlParser::T__3);
      setState(56);
      match(vqlParser::INT);
      break;
    }

    case vqlParser::T__4: {
      enterOuterAlt(_localctx, 2);
      setState(57);
      match(vqlParser::T__4);
      setState(58);
      int_range();
      break;
    }

    default:
      throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Vertex_filterContext
//------------------------------------------------------------------

vqlParser::Vertex_filterContext::Vertex_filterContext(ParserRuleContext *parent,
                                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

vqlParser::Property_filterContext *
vqlParser::Vertex_filterContext::property_filter() {
  return getRuleContext<vqlParser::Property_filterContext>(0);
}

size_t vqlParser::Vertex_filterContext::getRuleIndex() const {
  return vqlParser::RuleVertex_filter;
}

void vqlParser::Vertex_filterContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertex_filter(this);
}

void vqlParser::Vertex_filterContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertex_filter(this);
}

vqlParser::Vertex_filterContext *vqlParser::vertex_filter() {
  Vertex_filterContext *_localctx =
      _tracker.createInstance<Vertex_filterContext>(_ctx, getState());
  enterRule(_localctx, 8, vqlParser::RuleVertex_filter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(vqlParser::T__5);
    setState(62);
    property_filter();
    setState(63);
    match(vqlParser::T__6);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VertexContext
//------------------------------------------------------------------

vqlParser::VertexContext::VertexContext(ParserRuleContext *parent,
                                        size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *vqlParser::VertexContext::VAR() {
  return getToken(vqlParser::VAR, 0);
}

vqlParser::Vertex_filterContext *vqlParser::VertexContext::vertex_filter() {
  return getRuleContext<vqlParser::Vertex_filterContext>(0);
}

size_t vqlParser::VertexContext::getRuleIndex() const {
  return vqlParser::RuleVertex;
}

void vqlParser::VertexContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVertex(this);
}

void vqlParser::VertexContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVertex(this);
}

vqlParser::VertexContext *vqlParser::vertex() {
  VertexContext *_localctx =
      _tracker.createInstance<VertexContext>(_ctx, getState());
  enterRule(_localctx, 10, vqlParser::RuleVertex);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(vqlParser::T__7);
    setState(66);
    match(vqlParser::VAR);
    setState(68);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == vqlParser::T__5) {
      setState(67);
      vertex_filter();
    }
    setState(70);
    match(vqlParser::T__8);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fixed_lengthContext
//------------------------------------------------------------------

vqlParser::Fixed_lengthContext::Fixed_lengthContext(ParserRuleContext *parent,
                                                    size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *vqlParser::Fixed_lengthContext::INT() {
  return getToken(vqlParser::INT, 0);
}

size_t vqlParser::Fixed_lengthContext::getRuleIndex() const {
  return vqlParser::RuleFixed_length;
}

void vqlParser::Fixed_lengthContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFixed_length(this);
}

void vqlParser::Fixed_lengthContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFixed_length(this);
}

vqlParser::Fixed_lengthContext *vqlParser::fixed_length() {
  Fixed_lengthContext *_localctx =
      _tracker.createInstance<Fixed_lengthContext>(_ctx, getState());
  enterRule(_localctx, 12, vqlParser::RuleFixed_length);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(vqlParser::T__9);
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == vqlParser::INT) {
      setState(73);
      match(vqlParser::INT);
    }
    setState(76);
    match(vqlParser::T__10);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_lengthContext
//------------------------------------------------------------------

vqlParser::Variable_lengthContext::Variable_lengthContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<tree::TerminalNode *> vqlParser::Variable_lengthContext::INT() {
  return getTokens(vqlParser::INT);
}

tree::TerminalNode *vqlParser::Variable_lengthContext::INT(size_t i) {
  return getToken(vqlParser::INT, i);
}

size_t vqlParser::Variable_lengthContext::getRuleIndex() const {
  return vqlParser::RuleVariable_length;
}

void vqlParser::Variable_lengthContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable_length(this);
}

void vqlParser::Variable_lengthContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable_length(this);
}

vqlParser::Variable_lengthContext *vqlParser::variable_length() {
  Variable_lengthContext *_localctx =
      _tracker.createInstance<Variable_lengthContext>(_ctx, getState());
  enterRule(_localctx, 14, vqlParser::RuleVariable_length);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(vqlParser::T__9);
    setState(80);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == vqlParser::INT) {
      setState(79);
      match(vqlParser::INT);
    }
    setState(82);
    match(vqlParser::T__11);
    setState(83);
    match(vqlParser::INT);
    setState(84);
    match(vqlParser::T__10);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LengthContext
//------------------------------------------------------------------

vqlParser::LengthContext::LengthContext(ParserRuleContext *parent,
                                        size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

vqlParser::Fixed_lengthContext *vqlParser::LengthContext::fixed_length() {
  return getRuleContext<vqlParser::Fixed_lengthContext>(0);
}

vqlParser::Variable_lengthContext *vqlParser::LengthContext::variable_length() {
  return getRuleContext<vqlParser::Variable_lengthContext>(0);
}

size_t vqlParser::LengthContext::getRuleIndex() const {
  return vqlParser::RuleLength;
}

void vqlParser::LengthContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLength(this);
}

void vqlParser::LengthContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLength(this);
}

vqlParser::LengthContext *vqlParser::length() {
  LengthContext *_localctx =
      _tracker.createInstance<LengthContext>(_ctx, getState());
  enterRule(_localctx, 16, vqlParser::RuleLength);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(86);
      fixed_length();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(87);
      variable_length();
      break;
    }

    default:
      break;
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShortestContext
//------------------------------------------------------------------

vqlParser::ShortestContext::ShortestContext(ParserRuleContext *parent,
                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t vqlParser::ShortestContext::getRuleIndex() const {
  return vqlParser::RuleShortest;
}

void vqlParser::ShortestContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShortest(this);
}

void vqlParser::ShortestContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShortest(this);
}

vqlParser::ShortestContext *vqlParser::shortest() {
  ShortestContext *_localctx =
      _tracker.createInstance<ShortestContext>(_ctx, getState());
  enterRule(_localctx, 18, vqlParser::RuleShortest);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(vqlParser::T__12);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Forward_edgeContext
//------------------------------------------------------------------

vqlParser::Forward_edgeContext::Forward_edgeContext(ParserRuleContext *parent,
                                                    size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

vqlParser::LengthContext *vqlParser::Forward_edgeContext::length() {
  return getRuleContext<vqlParser::LengthContext>(0);
}

vqlParser::ShortestContext *vqlParser::Forward_edgeContext::shortest() {
  return getRuleContext<vqlParser::ShortestContext>(0);
}

size_t vqlParser::Forward_edgeContext::getRuleIndex() const {
  return vqlParser::RuleForward_edge;
}

void vqlParser::Forward_edgeContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForward_edge(this);
}

void vqlParser::Forward_edgeContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForward_edge(this);
}

vqlParser::Forward_edgeContext *vqlParser::forward_edge() {
  Forward_edgeContext *_localctx =
      _tracker.createInstance<Forward_edgeContext>(_ctx, getState());
  enterRule(_localctx, 20, vqlParser::RuleForward_edge);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
    case vqlParser::T__2: {
      enterOuterAlt(_localctx, 1);
      setState(92);
      match(vqlParser::T__2);
      setState(93);
      length();
      setState(95);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == vqlParser::T__12) {
        setState(94);
        shortest();
      }
      setState(97);
      match(vqlParser::T__13);
      break;
    }

    case vqlParser::T__13: {
      enterOuterAlt(_localctx, 2);
      setState(99);
      match(vqlParser::T__13);
      break;
    }

    default:
      throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Backward_edgeContext
//------------------------------------------------------------------

vqlParser::Backward_edgeContext::Backward_edgeContext(ParserRuleContext *parent,
                                                      size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

vqlParser::LengthContext *vqlParser::Backward_edgeContext::length() {
  return getRuleContext<vqlParser::LengthContext>(0);
}

vqlParser::ShortestContext *vqlParser::Backward_edgeContext::shortest() {
  return getRuleContext<vqlParser::ShortestContext>(0);
}

size_t vqlParser::Backward_edgeContext::getRuleIndex() const {
  return vqlParser::RuleBackward_edge;
}

void vqlParser::Backward_edgeContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBackward_edge(this);
}

void vqlParser::Backward_edgeContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBackward_edge(this);
}

vqlParser::Backward_edgeContext *vqlParser::backward_edge() {
  Backward_edgeContext *_localctx =
      _tracker.createInstance<Backward_edgeContext>(_ctx, getState());
  enterRule(_localctx, 22, vqlParser::RuleBackward_edge);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(102);
      match(vqlParser::T__14);
      setState(103);
      length();
      setState(105);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == vqlParser::T__12) {
        setState(104);
        shortest();
      }
      setState(107);
      match(vqlParser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(109);
      match(vqlParser::T__14);
      break;
    }

    default:
      break;
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Undirected_edgeContext
//------------------------------------------------------------------

vqlParser::Undirected_edgeContext::Undirected_edgeContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

vqlParser::LengthContext *vqlParser::Undirected_edgeContext::length() {
  return getRuleContext<vqlParser::LengthContext>(0);
}

vqlParser::ShortestContext *vqlParser::Undirected_edgeContext::shortest() {
  return getRuleContext<vqlParser::ShortestContext>(0);
}

size_t vqlParser::Undirected_edgeContext::getRuleIndex() const {
  return vqlParser::RuleUndirected_edge;
}

void vqlParser::Undirected_edgeContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUndirected_edge(this);
}

void vqlParser::Undirected_edgeContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUndirected_edge(this);
}

vqlParser::Undirected_edgeContext *vqlParser::undirected_edge() {
  Undirected_edgeContext *_localctx =
      _tracker.createInstance<Undirected_edgeContext>(_ctx, getState());
  enterRule(_localctx, 24, vqlParser::RuleUndirected_edge);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(112);
      match(vqlParser::T__2);
      setState(113);
      length();
      setState(115);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == vqlParser::T__12) {
        setState(114);
        shortest();
      }
      setState(117);
      match(vqlParser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(119);
      match(vqlParser::T__2);
      break;
    }

    default:
      break;
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EdgeContext
//------------------------------------------------------------------

vqlParser::EdgeContext::EdgeContext(ParserRuleContext *parent,
                                    size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

vqlParser::Forward_edgeContext *vqlParser::EdgeContext::forward_edge() {
  return getRuleContext<vqlParser::Forward_edgeContext>(0);
}

vqlParser::Backward_edgeContext *vqlParser::EdgeContext::backward_edge() {
  return getRuleContext<vqlParser::Backward_edgeContext>(0);
}

vqlParser::Undirected_edgeContext *vqlParser::EdgeContext::undirected_edge() {
  return getRuleContext<vqlParser::Undirected_edgeContext>(0);
}

size_t vqlParser::EdgeContext::getRuleIndex() const {
  return vqlParser::RuleEdge;
}

void vqlParser::EdgeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEdge(this);
}

void vqlParser::EdgeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEdge(this);
}

vqlParser::EdgeContext *vqlParser::edge() {
  EdgeContext *_localctx =
      _tracker.createInstance<EdgeContext>(_ctx, getState());
  enterRule(_localctx, 26, vqlParser::RuleEdge);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(125);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
        _input, 13, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(122);
      forward_edge();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(123);
      backward_edge();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(124);
      undirected_edge();
      break;
    }

    default:
      break;
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Path_appendContext
//------------------------------------------------------------------
